--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,20 @@ h1 {
   line-height: 1.1;
 }
 
+article {
+  width: 400px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  border: 3px solid #eaeaea;
+}
+
+section {
+  display: grid;
+  gap: 1em;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
