--- a/src/index.css
+++ b/src/index.css
@@ -37,31 +37,57 @@ h1 {
 
 article {
   width: 400px;
-  margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
   border: 3px solid #eaeaea;
+  border-radius: 8px;
+  border-top: 5px solid #646cff;
+  border-right: 3px solid #646cff;
+  margin-bottom: 15px;
+}
+
+form {
+  display: grid;
+  text-align: left;
+  font-size: 1.2em;
+}
+
+label {
+  font-weight: 400;
+  margin-bottom: 0.2em;
+  display: block;
+}
+
+input {
+  margin-bottom: 1em;
+  height: 20px;
+  font-size: 18px;
+}
+
+textarea {
+  margin-bottom: 1em;
+  height: 100px;
+  font-size: 18px;
 }
 
 section {
   display: grid;
-  gap: 1em;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
 }
 
 button {
+  background-color: #9095f7;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border: 2px solid #010101;
 }
 button:focus,
 button:focus-visible {
@@ -76,7 +102,9 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
+  /*
   button {
-    background-color: #f9f9f9;
+    background-color: #f0f1f7;
   }
+    */
 }
