--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@ a:hover {
   color: #535bf2;
 }
 
+p {
+  margin-bottom: 10px;
+}
+
+p.test {
+  margin-top: 5px;
+  margin-bottom: 15px;
+  font-style: italic;
+  font-weight: 200;
+}
+
 body {
   margin: 0;
   display: flex;
