--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
 #root {
   max-width: 1280px;
   margin: 10px auto;
-  padding: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 2rem;
   text-align: center;
-  border: 1px solid #eaeaea;
+  border: 3px solid #b3b6ec;
+  border-radius: 12px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  column-gap: fit-content;
+}
+
+div.postlist {
+  margin-top: 20px;
+  margin-left: 3rem;
+  grid-column-start: 2;
+  grid-column-end: 5;
 }
 
 .logo {
