--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,14 @@ p.test {
   font-style: italic;
   font-weight: 200;
 }
+div.posts-layout {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-column: 1/3;
+
+  display: grid;
+  grid-template-areas: "A A A A";
+}
 
 body {
   margin: 0;
@@ -44,6 +52,10 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+h2.gridtest {
+  grid-area: A;
+  height: 5vh;
 }
 
 h3 {
@@ -60,6 +72,8 @@ article {
   border-top: 5px solid #646cff;
   border-right: 3px solid #646cff;
   padding-left: 20px;
+}
+article.posts {
   margin-bottom: 15px;
 }
 
@@ -96,6 +110,8 @@ select {
 section {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+}
+section.posts {
 }
 
 button {
