--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,9 @@ section {
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
 }
 section.posts {
+  height: 50vh;
+  overflow-y: scroll;
+  padding: 20px;
 }
 
 button {
