--- a/src/index.css
+++ b/src/index.css
@@ -32,14 +32,6 @@ p.test {
   font-style: italic;
   font-weight: 200;
 }
-div.posts-layout {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-column: 1/3;
-
-  display: grid;
-  grid-template-areas: "A A A A";
-}
 
 body {
   margin: 0;
@@ -65,7 +57,7 @@ h3 {
 }
 
 article {
-  width: 400px;
+  width: 395px;
   text-align: left;
   border: 3px solid #eaeaea;
   border-radius: 8px;
@@ -73,8 +65,8 @@ article {
   border-right: 3px solid #646cff;
   padding-left: 20px;
 }
-article.posts {
-  margin-bottom: 15px;
+div.postsview {
+  padding-bottom: 15px;
 }
 
 form {
@@ -112,9 +104,13 @@ section {
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
 }
 section.posts {
-  height: 50vh;
+  padding-top: 15px;
+  border: 3px solid #928ef5;
+  border-radius: 3px;
+  height: 48vh;
   overflow-y: scroll;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 10px;
 }
 
 button {
