--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,8 @@ h2.gridtest {
 }
 
 h3 {
-  font-size: 1.2em;
-  line-height: 0.5;
+  font-size: 1.3em;
+  line-height: 1.1;
   margin-top: 25px;
 }
 
@@ -107,7 +107,7 @@ section.posts {
   padding-top: 15px;
   border: 3px solid #928ef5;
   border-radius: 3px;
-  height: 48vh;
+  height: 28rem;
   overflow-y: scroll;
   padding-left: 20px;
   padding-right: 10px;
